--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/src/views/css/index.css">
+    <title>Card Game</title>
 </head>
 
 <body>
@@ -56,6 +56,6 @@
 
 
 
-    <script src="../controller/index.js" type="module"></script>
+    <script src="/src/controller/index.js" type="module"></script>
 
 </html>
