--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src\views\css\index.css">
+    <link rel="stylesheet" href="src/views/css/index.css">
     <title>Card Game</title>
 </head>
 
@@ -56,6 +56,6 @@
 
 
 
-    <script src="src\controller\index.js" type="module"></script>
+    <script src="src/controller/index.js" type="module"></script>
 
 </html>
